# symcfg

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: coverage_100.sh
src/: apply.rs  config.rs  import.rs  lib.rs  link.rs  list.rs  main.rs  paths.rs  search.rs  sync.rs
tests/: cli.rs
