[package]
name = "symcfg"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Command-line tool for generating symbolic file configuration."
repository = "https://github.com/cLazyZombie/symcfg"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
